# padlock

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  action.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  padlock-example.yml  release.yml
Formula/: padlock.rb
crates/padlock/: Cargo.toml
crates/padlock-cli/: Cargo.toml  README.md  build.rs
crates/padlock-cli/src/: cache.rs  config.rs  filter.rs  main.rs  paths.rs
crates/padlock-cli/src/commands/: analyze.rs  bpf.rs  check.rs  diff.rs  explain.rs  fix.rs  init.rs  list.rs  summary.rs  watch.rs
crates/padlock-core/: Cargo.toml  README.md
crates/padlock-core/src/: arch.rs  findings.rs  ir.rs  lib.rs
crates/padlock-core/src/analysis/: false_sharing.rs  impact.rs  locality.rs  mod.rs  padding.rs  reorder.rs  scorer.rs
crates/padlock-dwarf/: Cargo.toml  README.md
crates/padlock-dwarf/src/: btf.rs  extractor.rs  lib.rs  pdb_reader.rs  reader.rs  type_resolver.rs
crates/padlock-dwarf/tests/: extractor_tests.rs
crates/padlock-macros/: Cargo.toml  README.md
crates/padlock-macros/src/: lib.rs
crates/padlock-macros/tests/: compile_tests.rs
crates/padlock-output/: Cargo.toml  README.md
crates/padlock-output/src/: diff.rs  explain.rs  json.rs  lib.rs  markdown.rs  project_summary.rs  sarif.rs  summary.rs
crates/padlock-source/: Cargo.toml  README.md
crates/padlock-source/src/: concurrency.rs  fixgen.rs  lib.rs
crates/padlock-source/src/frontends/: c_cpp.rs  go.rs  mod.rs  rust.rs  suppress.rs  zig.rs
crates/padlock/src/: lib.rs
docs/: architecture-plan.md  architecture.md  comparison.md  ebpf-btf.md  extending.md  findings.md  game-dev-ecs.md  publishing.md  real-world-examples.md  robotics-ros2.md
editors/vscode/: LICENSE  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
tests/fixtures/: padded.c  padded.go  padded.rs  padded.zig
tests/integration/: cli.rs
