[workspace]
members = [
    "crates/padlock-cli",
    "crates/padlock-core",
    "crates/padlock-dwarf",
    "crates/padlock-source",
    "crates/padlock-output",
    "crates/padlock-macros",
]
resolver = "2"

[workspace.package]
version       = "0.8.9"
edition       = "2024"
rust-version  = "1.88"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/gidotencate/padlock"
description = "Struct memory layout analyzer for C, C++, Rust, and Go"
keywords    = ["performance", "memory", "layout", "analysis", "cache"]
categories  = ["development-tools", "development-tools::profiling"]
readme      = "README.md"
