[workspace]
members = [
    "crates/padlock-cli",
    "crates/padlock-core",
    "crates/padlock-dwarf",
    "crates/padlock-source",
    "crates/padlock-output",
    "crates/padlock-macros",
]
resolver = "2"

[workspace.package]
version       = "0.9.6"
edition       = "2024"
rust-version  = "1.88"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/gidotencate/padlock"
description = "Struct memory layout analyzer for C, C++, Rust, Go, and Zig"
keywords    = ["performance", "memory", "layout", "analysis", "cache"]
categories  = ["development-tools", "development-tools::profiling"]
readme      = "README.md"

[workspace.dependencies]
padlock-core   = { path = "crates/padlock-core",   version = "0.9.6" }
padlock-dwarf  = { path = "crates/padlock-dwarf",  version = "0.9.6" }
padlock-source = { path = "crates/padlock-source", version = "0.9.6" }
padlock-output = { path = "crates/padlock-output", version = "0.9.6" }

[profile.release]
lto   = "thin"
strip = true
