[package]
name        = "padlock-cli"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description.workspace = true
keywords.workspace    = true
categories.workspace  = true
readme.workspace      = true

[[bin]]
name = "padlock"
path = "src/main.rs"

[[bin]]
name = "cargo-padlock"
path = "src/bin/cargo_padlock.rs"

[dependencies]
padlock-core   = { workspace = true }
padlock-dwarf  = { workspace = true }
padlock-source = { workspace = true }
padlock-output = { workspace = true }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
regex          = "1"
anyhow         = "1"
object         = { version = "0.39", features = ["read"] }
clap           = { version = "4", features = ["derive"] }
owo-colors     = "4"
comfy-table    = "7"
toml           = "1"
glob           = "0.3"
notify         = { version = "6", features = ["macos_fsevent"] }
rayon          = "1"

[dev-dependencies]
tempfile     = "3"
assert_cmd   = "2"
predicates   = "3"
serde_json   = "1"
padlock-core = { workspace = true, features = ["test-helpers"] }

[[test]]
name = "cli"
path = "../../tests/integration/cli.rs"
