[package]
name        = "padlock-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description.workspace = true
keywords.workspace    = true
categories.workspace  = true

[features]
test-helpers = []

[dependencies]
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rayon     = "1"
