[package]
name        = "padlock-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "Core IR, analysis passes, and findings for the padlock struct layout analyzer"
keywords.workspace    = true
categories.workspace  = true
readme                = "README.md"

[features]
test-helpers = []

[dependencies]
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rayon     = "1"
