[package]
name        = "padlock-dwarf"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description.workspace = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
padlock-core = { path = "../padlock-core", version = "0.2.0" }
anyhow       = "1"
gimli        = "0.29"
object       = { version = "0.36", features = ["read"] }
pdb          = "0.8"
