[package]
name        = "padlock-dwarf"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "DWARF/PDB binary analysis backend for the padlock struct layout analyzer"
keywords.workspace    = true
categories.workspace  = true
readme                = "README.md"

[dependencies]
padlock-core = { path = "../padlock-core", version = "0.8.6" }
anyhow       = "1"
gimli        = "0.29"
object       = { version = "0.39", features = ["read"] }
pdb          = "0.8"

[dev-dependencies]
tempfile = "3"
