[package]
name        = "padlock-macros"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "Compile-time struct layout assertions for padlock"
keywords.workspace    = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
