[package]
name        = "padlock-output"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description.workspace = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
padlock-core = { path = "../padlock-core", version = "0.2.0" }
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
similar      = "2"

[dev-dependencies]
padlock-core = { path = "../padlock-core", version = "0.2.0", features = ["test-helpers"] }
