[package]
name        = "padlock-output"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "Terminal, JSON, SARIF, and diff output formatters for the padlock struct layout analyzer"
keywords.workspace    = true
categories.workspace  = true
readme                = "README.md"

[dependencies]
padlock-core = { workspace = true }
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
similar      = "2"

[dev-dependencies]
padlock-core = { workspace = true, features = ["test-helpers"] }
