[package]
name        = "padlock-source"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description.workspace = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
padlock-core    = { path = "../padlock-core", version = "0.2.0" }
anyhow          = "1"
syn             = { version = "2", features = ["full", "visit"] }
quote           = "1"
tree-sitter     = "0.22"
tree-sitter-c   = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-go  = "0.21"
similar         = "2"

[dev-dependencies]
padlock-core = { path = "../padlock-core", version = "0.2.0", features = ["test-helpers"] }
