[package]
name        = "padlock-source"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "Source analysis backend (C/C++/Rust/Go/Zig) for the padlock struct layout analyzer"
keywords.workspace    = true
categories.workspace  = true
readme                = "README.md"

[dependencies]
padlock-core    = { path = "../padlock-core", version = "0.6.1" }
anyhow          = "1"
proc-macro2     = { version = "1", features = ["span-locations"] }
syn             = { version = "2", features = ["full", "visit"] }
quote           = "1"
tree-sitter     = "0.23"
tree-sitter-c   = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go  = "0.23"
tree-sitter-zig = "1.1"
similar         = "2"

[dev-dependencies]
padlock-core = { path = "../padlock-core", version = "0.6.1", features = ["test-helpers"] }
