[package]
name        = "padlock"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description           = "Struct memory layout analyzer — compile-time assertions and re-exports"
keywords.workspace    = true
categories.workspace  = true

[dependencies]
padlock-macros = { path = "../padlock-macros" }

# Re-export the proc-macro crate so users only need `padlock` in their
# [dependencies] instead of `padlock-macros`.
